Write server thread code more concisely